--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "gl-mat3": "^1.0.0",
+    "gl-matrix": "^2.4.0",
     "knuth-shuffle": "^1.0.8",
     "vectorize-text": "^3.0.2"
   }
