--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "gh-pages": "^1.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
     "style-loader": "^0.20.2",
+    "url-loader": "^1.0.1",
     "webpack": "^3.11.0",
     "webpack-merge": "^4.1.2"
   },
