--- a/package.json
+++ b/package.json
@@ -9,31 +9,33 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.3",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^2.0.1",
-    "clean-webpack-plugin": "^0.1.18",
+    "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^0.28.10",
-    "eslint": "^4.18.2",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.9.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "gh-pages": "^1.1.0",
+    "file-loader": "^3.0.1",
+    "gh-pages": "^2.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
-    "style-loader": "^0.20.2",
+    "mini-css-extract-plugin": "^0.5.0",
+    "style-loader": "^0.23.1",
     "url-loader": "^1.0.1",
-    "webpack": "^3.11.0",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "gl-matrix": "^2.4.0",
+    "gl-matrix": "^3.0.0",
     "knuth-shuffle": "^1.0.8",
     "vectorize-text": "^3.0.2"
   }
