--- a/package.json
+++ b/package.json
@@ -3,40 +3,30 @@
   "version": "0.1.0",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "webpack --watch",
-    "build": "webpack",
+    "start": "gatsby develop",
+    "build": "gatsby build",
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "browser-sync": "^2.23.6",
-    "browser-sync-webpack-plugin": "^2.0.1",
-    "clean-webpack-plugin": "^1.0.1",
-    "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^3.0.1",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "gh-pages": "^2.0.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.0.4",
-    "mini-css-extract-plugin": "^0.5.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3",
-    "webpack-merge": "^4.1.2"
+    "prettier": "^1.17.0"
   },
   "dependencies": {
+    "gatsby": "^2.4.0",
     "gl-matrix": "^3.0.0",
     "knuth-shuffle": "^1.0.8",
+    "p5": "^0.8.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "vectorize-text": "^3.0.2"
   }
 }
