--- a/.eslintrc
+++ b/.eslintrc
@@ -2,19 +2,25 @@
   "env": {
     "browser": true
   },
-  "extends": "airbnb-base",
+  "extends": ["airbnb-base", "prettier"],
   "globals": {
     "p5": false
   },
   "rules": {
     "semi": ["error", "never"],
     "object-curly-newline": "off",
-    "new-cap": ["error", {
-      "newIsCapExceptions": ["p5"]
-    }],
-    "no-param-reassign": ["error", {
-      "props": false
-    }],
+    "new-cap": [
+      "error",
+      {
+        "newIsCapExceptions": ["p5"]
+      }
+    ],
+    "no-param-reassign": [
+      "error",
+      {
+        "props": false
+      }
+    ],
     "no-console": "off"
   }
 }
