--- a/package.json
+++ b/package.json
@@ -1,41 +1,37 @@
 {
   "name": "generate-art",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "license": "UNLICENSED",
+  "private": true,
   "scripts": {
     "start": "webpack --watch",
     "build": "webpack",
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.0.1",
-    "clean-webpack-plugin": "^1.0.1",
-    "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^3.0.1",
-    "gh-pages": "^2.0.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.5.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "file-loader": "^4.2.0",
+    "gh-pages": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
-    "mini-css-extract-plugin": "^0.5.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3",
-    "webpack-merge": "^4.1.2"
+    "mini-css-extract-plugin": "^0.8.0",
+    "prettier": "^1.18.2",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "gl-matrix": "^3.0.0",
+    "gl-matrix": "^3.1.0",
     "knuth-shuffle": "^1.0.8",
     "vectorize-text": "^3.0.2"
   }
