--- a/package.json
+++ b/package.json
@@ -4,35 +4,19 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "start": "webpack --watch",
+    "start": "parcel -p 8080 src/index.html",
     "build": "webpack",
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "browser-sync-webpack-plugin": "^2.0.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.5",
-    "css-loader": "^3.2.1",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.18.2",
-    "file-loader": "^5.0.2",
-    "gh-pages": "^2.1.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.0.4",
-    "mini-css-extract-plugin": "^0.8.0",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
-    "style-loader": "^1.0.1",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2"
+    "tslint": "^5.20.1",
+    "tslint-config-airbnb": "^5.11.2",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.7.3"
   },
   "dependencies": {
-    "gl-matrix": "^3.1.0",
-    "knuth-shuffle": "^1.0.8",
-    "vectorize-text": "^3.0.2"
+    "@svgdotjs/svg.js": "^3.0.16"
   }
 }
