--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "@types/delaunator": "^3.0.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "tslint": "^5.20.1",
@@ -17,6 +18,7 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
-    "@svgdotjs/svg.js": "^3.0.16"
+    "@svgdotjs/svg.js": "^3.0.16",
+    "delaunator": "^4.0.1"
   }
 }
