--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
-    "delaunator": "^4.0.1"
+    "delaunator": "^4.0.1",
+    "simplex-noise": "^2.4.0"
   }
 }
